feat: add form input data validation rules